--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -7397,7 +7397,9 @@ a.cp-modules:hover{
 .ps-container>.ps-scrollbar-y-rail {
     z-index: 1002;
 }
-
+.ps-container>.ps-scrollbar-x-rail {
+    z-index: 1002;
+}
 #relationBlock .recordScroll{
     max-height:150px;
 }
