--- a/layouts/v7/skins/marketing_and_sales/style.css
+++ b/layouts/v7/skins/marketing_and_sales/style.css
@@ -6637,7 +6637,7 @@ a.cp-modules:hover {
   padding-left: 230px;
 }
 .listViewPageDiv .ps-scrollbar-x-rail {
-  opacity: 1 !important;
+  /* opacity: 1 !important; */
   z-index: 1000;
 }
 li.select2-search-choice div {
@@ -6749,9 +6749,9 @@ li.select2-search-choice div {
 .main-container-Reports .full-width {
   padding-left: 0px !important;
 }
-.listViewPageDiv .ps-scrollbar-x-rail {
+/* .listViewPageDiv .ps-scrollbar-x-rail {
   opacity: 1 !important;
-}
+} */
 li.select2-search-choice div {
   white-space: nowrap;
 }
