--- a/resources/styles.css
+++ b/resources/styles.css
@@ -2,6 +2,30 @@
   clear: both;
 }
 
+/* 
+ *一覧画面の列幅可変機能追加に伴う修正
+ */
+table#listview-table {
+  border-spacing: 0;
+  border-collapse: separate;
+}
+table#listview-table tr{
+  border-bottom: #ddd 1px solid;
+}
+tr.searchRow.listViewSearchContainer > th{
+  border-bottom: #ddd 1px solid;
+}
+tbody tr.listViewEntries:first-child {
+  border-top: none !important;
+  border-bottom: none !important;
+}
+tr.listViewEntries:nth-of-type(1) > td.listViewRecordActions.fix-data-column {
+  border-top: 0px !important;
+}
+tr.listViewEntries:nth-of-type(1) > td.listViewEntryValue {
+  border-top: 0px !important;
+}
+
 /*
  * 一覧の左側の列固定（IE11非対応）
  */
@@ -22,11 +46,9 @@
     background-clip: padding-box;
   }
   .listViewRecordActions.fix-data-column {
-    border-top: 0px !important;
     border-bottom: 0px !important;
   }
   .listViewEntryValue {
-    border-top: 0px !important;
     border-bottom: 0px !important;
   }
   .listViewEntries {
