--- a/resources/styles.css
+++ b/resources/styles.css
@@ -12,14 +12,20 @@ table#listview-table {
 table#listview-table tr{
   border-bottom: #ddd 1px solid;
 }
+tr.listViewEntries:first-child {
+  border-top: none !important;
+  border-bottom: none !important;
+}
 tr.listViewContentHeader > th {
   border-bottom: #ddd 1px solid;
 }
 tr.searchRow.listViewSearchContainer > th {
   border-bottom: #ddd 1px solid;
 }
-tbody tr.listViewEntries:first-child {
-  border-top: none !important;
+tr.listViewContentHeader > th.table-bottom-border {
+  border-bottom: #ddd 1px solid;
+}
+tr.listViewContentHeader > th.none-border-bottom {
   border-bottom: none !important;
 }
 tr.listViewEntries:nth-of-type(1) > td.listViewRecordActions {
@@ -28,8 +34,16 @@ tr.listViewEntries:nth-of-type(1) > td.listViewRecordActions {
 tr.listViewEntries:nth-of-type(1) > td.listViewEntryValue {
   border-top: 0px !important;
 }
-thead > tr.listViewContentHeader > th.table-bottom-border {
-  border-bottom: #ddd 1px solid;
+table#listview-table .emptyRecordsDiv > td {
+  border: none;
+}
+.dummy {
+  right: 0;
+  z-index: 1;
+  background: #fff;
+}
+tr.listViewEntries:nth-of-type(1) > td.dummy {
+  border-top: none;
 }
 
 /*
@@ -62,12 +76,6 @@ thead > tr.listViewContentHeader > th.table-bottom-border {
   }
   .listViewEntries:last-child {
     border-bottom: 0px;
-  }
-  .dummy {
-    right: 0;
-    z-index: 1;
-    /* border-top: 1px solid #ddd; */
-    background: #fff;
   }
 }
 /*
