--- a/resources/styles.css
+++ b/resources/styles.css
@@ -9,28 +9,21 @@ table#listview-table {
   border-spacing: 0;
   border-collapse: separate;
 }
-table#listview-table tr{
+table#listview-table tr, 
+tr.listViewContentHeader > th,
+tr.searchRow.listViewSearchContainer > th,
+tr.listViewContentHeader > th.table-bottom-border {
   border-bottom: #ddd 1px solid;
 }
 tr.listViewEntries:first-child {
   border-top: none !important;
   border-bottom: none !important;
 }
-tr.listViewContentHeader > th {
-  border-bottom: #ddd 1px solid;
-}
-tr.searchRow.listViewSearchContainer > th {
-  border-bottom: #ddd 1px solid;
-}
-tr.listViewContentHeader > th.table-bottom-border {
-  border-bottom: #ddd 1px solid;
-}
+
 tr.listViewContentHeader > th.none-border-bottom {
   border-bottom: none !important;
 }
-tr.listViewEntries:nth-of-type(1) > td.listViewRecordActions {
-  border-top: 0px !important;
-}
+tr.listViewEntries:nth-of-type(1) > td.listViewRecordActions,
 tr.listViewEntries:nth-of-type(1) > td.listViewEntryValue {
   border-top: 0px !important;
 }
