共有カレンダーのユーザーリストの表示が崩れる不具合の修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -709,3 +709,23 @@ ul#productsImageContainer > li a{
   right: 15px;
   z-index: 1;
 } 
+
+/* カレンダーユーザーの選択リスト */
+.activitytypes .activitytype-indicator .userName.textOverflowEllipsis {
+  vertical-align: middle;
+}
+@media (min-width: 767px) and (max-width: 991px) {
+  .activitytypes .activitytype-indicator .userName.textOverflowEllipsis {
+    max-width: 600px;
+  } 
+}
+@media (min-width: 575px) and (max-width: 768px) {
+  .activitytypes .activitytype-indicator .userName.textOverflowEllipsis {
+    max-width: 400px;
+  }
+}
+@media (min-width: 401px) and (max-width: 576px) {
+  .activitytypes .activitytype-indicator .userName.textOverflowEllipsis {
+    max-width: 200px;
+  }
+}
