リスト部分のスタイルを修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -729,3 +729,7 @@ ul#productsImageContainer > li a{
     max-width: 200px;
   }
 }
+
+.calendarview div.sidebar-essentials {
+  overflow: hidden;
+}
