thinkingreed-inc#1157 更新履歴に削除と復元の情報を表示するように変更

--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -3089,6 +3089,7 @@ input[type="text"]:read-only {
   left: 19%;
 }
 .updates_timeline > li {
+  padding-bottom: 10px;
   position: static;
   top: 0;
   display: block;
