--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -3343,6 +3343,7 @@ strong, b, th{
 }
 
 .updates_timeline > li {
+    padding-bottom: 10px;
     position: static;
     top: 0;
     display: block;
