--- a/layouts/v7/lib/jquery/fullcalendar/fullcalendar.css
+++ b/layouts/v7/lib/jquery/fullcalendar/fullcalendar.css
@@ -592,6 +592,10 @@ temporary rendered events).
 	margin-top: -20px;
 }
 
+.description-info {
+    margin-bottom: 20px;
+}
+
 
 /* Event Selection (only for touch devices)
 --------------------------------------------------------------------------------------------------*/
