Noto Sansは今回取り込まないようにし、Windowsではメイリオを基本的に利用するように修正

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -68,7 +68,7 @@ html{
 body{
     margin: 0;
     padding: 0;
-    font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "Noto Sans JP", "Noto Sans CJK JP", "Meiryo", "MS PGothic", "MS Gothic", sans-serif;
+    font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "Meiryo", "MS PGothic", "MS Gothic", sans-serif;
     font-size : 12px;
     font-weight: normal;
     font-style: normal;
@@ -83,7 +83,7 @@ body > .mCSB_inside > .mCSB_container{
     height: inherit;
 }
 .select2-container .select2-choice{
-  font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "Noto Sans JP", "Noto Sans CJK JP", "Meiryo", "MS PGothic", "MS Gothic", sans-serif;
+  font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "Meiryo", "MS PGothic", "MS Gothic", sans-serif;
 }
 .app-fixed-navbar{
     background: #fff;
@@ -8443,7 +8443,7 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 	padding: 4px 10px 4px 5px !important
 }
 .menu-item .custom-module {
-	font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "Noto Sans JP", "Noto Sans CJK JP", "Meiryo", "MS PGothic", "MS Gothic", sans-serif;
+	font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "Meiryo", "MS PGothic", "MS Gothic", sans-serif;
 	font-size: 12px;
 	border-radius: 4px;
 	padding: 2px;
