--- a/resources/styles.css
+++ b/resources/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "Noto Sans JP", "Noto Sans CJK JP", "Meiryo", "MS PGothic", "MS Gothic", sans-serif;
+  font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "Meiryo", "MS PGothic", "MS Gothic", sans-serif;
   font-weight: 400;
 }
 
