--- a/resources/styles.css
+++ b/resources/styles.css
@@ -52,6 +52,7 @@ td.listViewEntryValue  .fieldValue .value {
     scrollbar-width: none;
   }
 
+  .quickCreateContent > table.table > tbody > tr > td.blankField,
   .fieldBlockContainer>table.table:not(#lineItemResult)>tbody>tr>td.blankField,
   .detailview-table>tbody>tr>td.blankField {
     display: none;
