--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1019,10 +1019,6 @@ input:focus ~ .bar:before, input:focus ~ .bar:after {
   margin-top: 0;
 }
 
-.totp-step-message {
-	margin-left: 10px;
-}
-
 .passkey-step-message {
 	margin-left: 10px;
 }
@@ -1043,6 +1039,7 @@ input:focus ~ .bar:before, input:focus ~ .bar:after {
   flex-direction: row;
   align-items: center;
   justify-content: start;
+  gap: 5px;
 }
 
 .totp-flex-row {
@@ -1050,6 +1047,7 @@ input:focus ~ .bar:before, input:focus ~ .bar:after {
   flex-direction: row;
   align-items: first baseline;
   justify-content: center;
+  gap: 5px;
 }
 
 .passkey-form-group {
@@ -1126,4 +1124,115 @@ input:focus ~ .bar:before, input:focus ~ .bar:after {
 
 #totpAdd {
 	margin: 0 20px;
+}
+
+.multifactor-modal {
+  width: 800px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.multi-factor-flex-row {
+  display: flex;
+  flex-direction: row;
+  min-height: 400px; /* 必要に応じて調整 */
+  align-items: stretch;
+  justify-content: center;
+  gap: 32px;
+}
+
+.multi-factor-area {
+  display: flex;
+  flex: 1 1 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 40%;
+  border: #CCC solid 2px;
+  border-radius: 10px;
+  margin: 0 20px;
+  padding: 25px;
+  font-size: 10pt;
+}
+
+.multi-factor-area-full {
+  display: flex;
+  flex: 1 1 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: #CCC solid 2px;
+  border-radius: 10px;
+  padding: 25px;
+  font-size: 10pt;
+  gap: 5px;
+}
+
+.multi-factor-area-full svg {
+  flex-shrink: 0;
+}
+
+.multi-factor-area h4 {
+  display: flex;
+  flex-direction: row;
+  font-size: 18px;
+  font-weight: bold;
+  align-items: center;
+  gap: 5px;
+}
+
+.multi-factor-area h4 svg {
+  stroke: #35aa47;
+}
+
+.warning-label p {
+  color: #999;
+  margin: 0;
+}
+
+.multi-factor-area ul {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.multi-factor-area li {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 15px 0;
+  justify-content: flex-start;
+  gap: 5px;
+}
+
+.multi-factor-area li:first-child {
+  margin-top: 0;
+}
+
+.multi-factor-area li:last-child {
+  margin-bottom: 0;
+}
+
+.multi-factor-area svg {
+  flex-shrink: 0;
+}
+
+.multi-factor-area button {
+  margin-top: auto;
+  margin-bottom: 0;
+}
+
+.multi-factor-area > div {
+  margin: 10px 0;
+}
+
+.multi-factor-area > div.multi-factor-warning-label {
+  margin-bottom: 20px;
+  color: #999;
+}
+
+.multi-factor-description {
+  color: #999;
 }
